--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,42 +2,39 @@
 {% load static %}
 
 {% block title %}
-Selva's Blog Site
+Vihaan's Blog Site
 {% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "blog/index.css" %}">
+<link rel="stylesheet" href="{% static "blog/index.css" %}">
 {% endblock %}
 
 {% block content %}
 <section id="welcome">
     <header>
-        <img src="{% static "blog/images/raju.jpg" %}" alt="Selva">
-        <h2>Selva</h2>
+        <h2>Vihaan</h2>
     </header>
     <p>
-        Hi, I am Selva and I love to cook healthy food
+        Hi, I am Vihaan and I love to cook healthy food.
     </p>
 </section>
 
 <section id="latest-posts">
-    <h2>My latest posts</h2>
+    <h2>My Latest Posts</h2>
     <ul>
         <li>
             <article class="post">
-                <a href="">
-                    <img src="" alt="Selva's posts">
-                </a>
                 <div class="post__content">
                     <h3>Healthy Smoothie</h3>
                     <p>
-                        Smoothies are a good way to start you healthy day.
-                        Try a smoothie for your breakfast.
+                        Smoothies are a great way to start your healthy day.
+                        Try a smoothie for breakfast.
                         Keeps you energetic and full of vigour.
                     </p>
                 </div>
             </article>
         </li>
+       
     </ul>
 </section>
 
