--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
 <body>
     <header id="main-navigation">
-        <h1><a href="/">Selva's Blog</a></h1>
+        <h1><a href="/">vihaan's Blog</a></h1>
         <nav>
             <a href="/posts">All blog posts</a>
         </nav>
