--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -1,13 +1,27 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block title %}
+Vihaan's Tech Blog - All Posts
+{% endblock %}
+
+{% block css_files %}
+<link rel="stylesheet" href="{% static "blog/index.css" %}">
+{% endblock %}
+
 {% block content %}
-    <h1>All Posts</h1>
-    <div id="postList">
-        {% for post in posts %}
-            <div class="post-summary">
-                <h3><a href="{% url 'single-post-page' post.id %}">{{ post.title }}</a></h3>
-                <p>{{ post.summary }}</p>
-            </div>
-        {% endfor %}
+<section id="posts-section">
+    <div class="container">
+        <h1 class="section-title">All Posts</h1>
+        <div id="postList">
+            {% for post in posts %}
+                <div class="post-summary">
+                    <h3><a href="{% url 'single-post-page' post.id %}">{{ post.title }}</a></h3>
+                    <p>{{ post.summary }}</p>
+                </div>
+            {% endfor %}
+        </div>
     </div>
+</section>
 {% endblock %}
